Remove padding to fix card being cut off in responsive

--- a/src/components/SickPicks.scss
+++ b/src/components/SickPicks.scss
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
   grid-gap: 10px;
-  padding: 0 30px 30px;
   max-width: 80%;
   margin: 0 auto;
 
